--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
     "concurrently": "^5.1.0",
+    "firebase": "^7.19.0",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
