--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "qawebautomationtest",
+  "name": "ls",
   "version": "1.0.0",
-  "description": "",
+  "description": "A basic template for creating an new React webpage with a Node.js backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
